--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -20,7 +20,7 @@
             <div id="newsletterContainer">
                 <div id="newsletter">
                     <div id="logo">
-                        <img th:src="@{~/img/logos/treecreateLogo/TCFullWhiteLogo.png}" alt="Treecreate Logo"
+                        <img th:src="@{~/img/logos/treecreateLogo/TCFullLogoWhite.svg}" alt="Treecreate Logo"
                              id="treecreateLogo">
                     </div>
                     <span id="comingSoon">Coming Soon</span>
@@ -33,12 +33,21 @@
                             Submit
                         </button>
                     </div>
+                    <div class="icon-row-top">
+                        <a href="/facebook" target="popup"
+                           onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
+                            <img th:src="@{~/img/logos/facebookWhiteLogo.svg}" alt="facebook" id="facebookLogo"
+                                 class="icon"></a>
+                        <a href="https://www.instagram.com/tree_create/" target="popup"
+                           onclick="window.open('https://www.instagram.com/tree_create/','name','width=600,height=800')">
+                            <img th:src="@{~/img/logos/instagramWhiteLogo.svg}" alt="instagram" id="instagramLogo" class="icon"></a>
+                    </div>
                 </div>
             </div>
             <div id="aboutUsContainer">
                 <div id="aboutUs">
                     <section id="generalInformation">
-                        <span class="title">About US</span><br>
+                        <span class="title">About us</span><br>
                         <span class="subTitle">Product</span><br>
                         <p>
                             Unique wood design. You get to pick the design and then create your own tree with the names
@@ -79,7 +88,7 @@
                             Founded in 2020 by a small team of students from KEA.
                         </p>
                     </section>
-                    <section id="reviews">
+                    <section id="reviews" class="scale-dependent-removal">
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
@@ -116,6 +125,43 @@
                             </div>
                         </div>
                     </section>
+                    <div class="mobile-review scale-dependent-show" style="display: none;">
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Cristian Valentin</p>
+                                <p>
+                                    “I love the tree! It is some great quality wood and the design is cut with such
+                                    detail
+                                    its amazing!”
+                                </p>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Anna Krag-Sørensen</p>
+                                <p>
+                                    “Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at
+                                    se
+                                    ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
+                                </p>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Laura Faurholt</p>
+                                <p>
+                                    “Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig
+                                    smukt.”
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -130,18 +176,23 @@
                     </p>
                 </div>
                 <div class="section">
-                    <span class="title">Product</span><br>
+                    <span class="title">Product</span><br><br>
                     Every purchase plants a tree<br>
                     Eco Friendly packaging<br>
                     Produced in Denmark<br>
-                    <img th:src="@{~/img/icons/danishTransportIcon.svg}" alt="Danish Transport" class="icon">
-                    <img th:src="@{~/img/icons/ecoPackageIcon.svg}" alt="Eco friendly packaging" class="icon">
-                    <img th:src="@{~/img/icons/recyclingIcon.svg}" alt="Recycled" class="icon">
                 </div>
+
                 <div class="section">
-                    <span class="title">Address</span><br>
+                    <span class="title">Address</span><br><br>
                     Denmark<br>
                     Copenhagen
+                </div>
+            </div>
+            <div class="footer-row">
+                <div class="icon-row">
+                    <img th:src="@{~/img/icons/danishTransportIcon.svg}" alt="Danish Transport" class="icon">
+                    <img th:src="@{~/img/icons/ecoPackageIcon.svg}" alt="Eco friendly packaging" class="icon">
+                    <img th:src="@{~/img/icons/recyclingWhiteIcon.svg}" alt="Recycled" class="icon">
                 </div>
             </div>
             <div class="footer-row">
@@ -149,7 +200,7 @@
                     <hr id="footer-separator">
                 </div>
             </div>
-            <div class="footer-row" id="footer-bottom">
+            <div class="footer-row" id="footer-bottom" >
                 <div class="section">
                     Copyright © 2020 TreeCreate All Rights Reserved.
                 </div>
