Add basic templates for the navbar and footer, Split product.css
Add basic functionality for importating page components like the navbar and the footer via thymeleaf.
Example of usage can be seen in testProduct.html
Split up product.css to separate the navbar and footer specific css

--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -6,6 +6,8 @@
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/products.css}" rel="stylesheet">
     <link th:href="@{/styles/familyTree.css}" rel="stylesheet">
+    <link th:href="@{/styles/productNavbar.css}" rel="stylesheet">
+    <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <script th:src="@{/js/familyTree.js}"></script>
 </head>
