--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -13,10 +13,9 @@
 <section id="navigationContainer">
     <nav id="navBar">
         <div id="navBar-left">
-            <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}" alt="treecreate"
-                                  id="treecreateLogo"
-                                  class="icon" style="width: 14vh;"></a>
-            <a href="/facebook" target="popup"
+            <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
+                                  alt="treecreate" id="treecreateLogo"></a>
+            <a href="https://www.facebook.com/treecreate.dk" target="popup"
                onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
                 <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon" class="icon"></a>
             <a href="https://www.instagram.com/tree_create/" target="popup"
