--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -23,11 +23,13 @@
                 <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon" class="icon"></a>
         </div>
         <div id="navBar-right">
+            <a href="/index">Home</a>
+            <a href="/aboutUs">About Us</a>
             <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
                                            id="shoppingBasketIcon" class="icon"> (0) Items</a>
-            <a href="/aboutUs">About Us</a>
-            <a href="/specialRequest">Special Request</a>
             <a href="/login">Login</a>
+            <a href="/changeLanguage"><img th:src="@{~/img/icons/englishIcon.svg}" alt="change language"
+                                           id="changeLanguageIcon" class="icon"></a>
         </div>
     </nav>
 </section>
