--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -14,19 +14,19 @@
     <nav id="navBar">
         <div id="navBar-left">
             <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
-                                  alt="treecreate" id="treecreateLogo"></a>
+                                  alt="treecreate" id="treecreateLogo" class="filterColor"></a>
             <a href="https://www.facebook.com/treecreate.dk" target="popup"
                onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
-                <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon" class="icon"></a>
+                <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon" class="icon filterColor"></a>
             <a href="https://www.instagram.com/tree_create/" target="popup"
                onclick="window.open('https://www.instagram.com/tree_create/','name','width=600,height=800')">
-                <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon" class="icon"></a>
+                <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon" class="icon filterColor"></a>
         </div>
         <div id="navBar-right">
             <a href="/index">Home</a>
             <a href="/aboutUs">About Us</a>
             <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
-                                           id="shoppingBasketIcon" class="icon"> (0) Items</a>
+                                           id="shoppingBasketIcon" class="icon filterColor"> (0) Items</a>
             <a href="/login">Login</a>
             <a href="/changeLanguage"><img th:src="@{~/img/icons/englishIcon.svg}" alt="change language"
                                            id="changeLanguageIcon" class="icon"></a>
