--- a/src/main/resources/static/styles/productFooter.css
+++ b/src/main/resources/static/styles/productFooter.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    color: white;
 
     width: 100%;
     height: 20vh;
@@ -36,7 +35,6 @@
 #footer
 {
     font-size: 18px;
-    text-shadow: 0 1px 3px #000000;
     text-align: center;
 }
 
@@ -52,6 +50,6 @@
 
 #footer-separator
 {
-    color: white;
+    color: black;
     width: 70vw;
 }
