--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -10,6 +10,14 @@
     background-color: white;
 }
 
+#navBar img.filterColor
+{
+    /* Applies a specific color to any img(and is an svg) that is marked with a class .filterColor */
+    /* Hex-to-filter converter: https://codepen.io/sosuke/pen/Pjoqqp */
+    /* Current color: #AF6826 */
+    filter: invert(37%) sepia(58%) saturate(621%) hue-rotate(347deg) brightness(105%) contrast(87%);
+}
+
 #navBar a
 {
     display: inline-block;
@@ -17,6 +25,7 @@
     height: 4vh;
     width: fit-content;
     padding: 0 0.6vh;
+    color: #AF6826;
 }
 
 #navBar .icon
