--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -9,6 +9,7 @@
     height: 6vh;
     background-color: white;
     --navbarMainColor: #AF6826;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
 #navBar img.filterColor
