--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -1,3 +1,10 @@
+#navigationContainer
+{
+    position: -webkit-sticky; /* Safari compatibility*/
+    position: sticky;
+    top: 0;
+}
+
 #navBar
 {
     display: flex;
