Adjust name input field
Adjust the input field to have a proper placeholder and be centered in the draggable box

--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -39,7 +39,7 @@
                 <div class="deleteDraggableBoxButton" onclick="deleteBox(this)"></div>
             </div>
             <div class="draggableBoxMiddleRow">
-               <textarea type="text" placeholder="Your name here..." wrap="soft"></textarea>
+                <span class="input" role="textbox" contenteditable th:maxlength="25"></span>
             </div>
             <div class="draggableBoxLowerRow">
                 <div class="dragDraggableBoxButton"></div>
