--- a/src/main/resources/static/styles/familyTree.css
+++ b/src/main/resources/static/styles/familyTree.css
@@ -18,25 +18,6 @@
     width: 0;
 }
 
-.draggableBox .icon
-{
-    width: 4vh;
-    height: 4vh;
-    vertical-align: middle;
-}
-
-.draggableBox textarea
-{
-    font-family: Share Tech, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 27px;
-    color: black;
-    border: none;
-    padding: 0;
-}
-
 .draggableBoxUpperRow
 {
     flex-direction: row-reverse;
@@ -49,9 +30,10 @@
 
 .draggableBoxMiddleRow
 {
-    flex-direction: row;
-    justify-content: space-evenly;
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     height: 44%;
     width: 100%;
 }
@@ -98,4 +80,42 @@
 .draggableBox:hover .deleteDraggableBoxButton
 {
     visibility: visible;
+}
+
+.draggableBox .icon
+{
+    width: 4vh;
+    height: 4vh;
+    vertical-align: middle;
+    background-repeat: no-repeat;
+}
+
+.draggableBox .input
+{
+    min-width: 100px;
+    max-width:310px;
+    max-height: 102px;
+    overflow: hidden;
+
+    font-family: Share Tech, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 27px;
+    color: black;
+    border: none;
+    padding: 0;
+}
+
+.draggableBox .input:empty::before
+{
+    content: "Type your name here...";
+    color: grey;
+}
+
+
+.draggableBox .input:empty:focus::before
+{
+    content: "";
+    color: black;
 }
