Remove an obsolete tag

--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -39,7 +39,7 @@
                 <div class="deleteDraggableBoxButton" onclick="deleteBox(this)"></div>
             </div>
             <div class="draggableBoxMiddleRow">
-                <span class="input" role="textbox" contenteditable th:maxlength="25"></span>
+                <span class="input" role="textbox" contenteditable></span>
             </div>
             <div class="draggableBoxLowerRow">
                 <div class="dragDraggableBoxButton"></div>
