--- a/src/main/resources/static/styles/products.css
+++ b/src/main/resources/static/styles/products.css
@@ -13,7 +13,7 @@ html, body
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 95vh; /* Account for the navbar height */
+    min-height: 95vh; /* Account for the navbar height */
 }
 
 #product
