--- a/src/main/resources/static/styles/draggableBox.css
+++ b/src/main/resources/static/styles/draggableBox.css
@@ -101,7 +101,7 @@
     max-height: 102px;
     overflow: hidden;
 
-    font-family: Share Tech, sans-serif;
+    font-family: Spectral, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
