--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -9,6 +9,7 @@
     <script th:src="@{/js/landingPage.js}"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Simonetta">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
 </head>
 <body>
 <section id="pageContainer">
@@ -93,7 +94,7 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <p class="title">Cristian Valentin</p>
+                                <p class="title">Cristian</p>
                                 <p>
                                     “I love the tree! It is some great quality wood and the design is cut with such
                                     detail
@@ -105,7 +106,7 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <p class="title">Anna Krag-Sørensen</p>
+                                <p class="title">Anna</p>
                                 <p>
                                     “Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at
                                     se
@@ -117,7 +118,7 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <p class="title">Laura Faurholt</p>
+                                <p class="title">Laura</p>
                                 <p>
                                     “Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig
                                     smukt.”
@@ -130,11 +131,10 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <p class="title">Cristian Valentin</p>
+                                <p class="title">Cristian</p>
                                 <p>
                                     “I love the tree! It is some great quality wood and the design is cut with such
-                                    detail
-                                    its amazing!”
+                                    detail its amazing!”
                                 </p>
                             </div>
                         </div>
@@ -142,11 +142,10 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <p class="title">Anna Krag-Sørensen</p>
+                                <p class="title">Anna</p>
                                 <p>
                                     “Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at
-                                    se
-                                    ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
+                                    se ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
                                 </p>
                             </div>
                         </div>
@@ -154,7 +153,7 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <p class="title">Laura Faurholt</p>
+                                <p class="title">Laura</p>
                                 <p>
                                     “Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig
                                     smukt.”
