--- a/src/main/resources/static/styles/landingPage.css
+++ b/src/main/resources/static/styles/landingPage.css
@@ -80,7 +80,7 @@ html, body
 {
     margin: 0 15vw;
     width: 70vw;
-    font-size: 2.4vw;
+    font-size: 18px;
     text-align: center;
     text-shadow: 0 1px 3px #000000;
 }
@@ -92,12 +92,12 @@ html, body
 
 #aboutUs .title
 {
-    font-size: 4.75vw;
+    font-size: 36px;
 }
 
 #aboutUs .subTitle
 {
-    font-size: 3.17vw;
+    font-size: 24px;
 }
 
 #aboutUs section
@@ -185,19 +185,19 @@ html, body
 
 #footer
 {
-    font-size: calc(12px + 1vw);
+    font-size: 18px;
     text-shadow: 0 1px 3px #000000;
     text-align: center;
 }
 
 #footer .title
 {
-    font-size: calc(16px + 2vw)
+    font-size: 24px;
 }
 
 #footer-bottom
 {
-    font-size: calc(11px + 0.7vw);
+    font-size: 18px;
     padding-bottom: 17px;
 }
 
@@ -234,7 +234,7 @@ html, body
 body, html
 {
     color: white;
-    font-size: 1.25vw;
+    font-size: 18px;
 }
 #pageContainer
 {
@@ -284,11 +284,11 @@ body, html
 
 #reviews .title
 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Spectral, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
     color: white;
-    font-size: 2.4vw;
+    font-size: 36px;
 }
 #reviews span.title
 {
@@ -299,7 +299,7 @@ body, html
 {
     width: 100%;
     height: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Spectral, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
 }
@@ -342,13 +342,13 @@ body, html
 
 #comingSoon
 {
-    font-size: calc(36px + 3vw);
-    line-height: calc(36px + 3vw);
+    font-size: 48px;
+    line-height: 48px;
 }
 #subscribe
 {
-    font-size: calc(12px + 1vw);
-    line-height: calc(12px + 1vw);
+    font-size: 18px;
+    line-height: 18px;
 }
 
 #emailContainer
@@ -358,19 +358,18 @@ body, html
 
 #emailInput
 {
-    font-size: calc(6px + 1vw);
+    font-size: 18px;
+    line-height: 18px;
     background: none;
     border: 2px white solid;
     border-radius: 5px;
-    height: calc(15px + 3vh);
+    height: 37px;
     min-width: 20vw;
     max-width: 30vw;
     width: 100%;
     margin-right: 1vw;
     color: white;
     opacity: 1;
-    font-size: calc(6px + 1vw);
-    line-height: calc(6px + 1vw);
     padding-left: 7px;
 }
 
@@ -378,13 +377,13 @@ body, html
 {
     color: white;
     opacity: 1;
-    font-size: calc(6px + 1vw);
-    line-height: calc(6px + 1vw);
+    font-size: 18px;
+    line-height: 18px;
 }
 
 #emailSubmitBtn
 {
-    font-size: calc(7px + 1vw);
+    font-size: 18px;
     background: white;
     border-radius: 7px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -399,35 +398,78 @@ body, html
     height: calc(18px + 2vh);
     width: calc(56px + 2vh);
     margin: 1px 5px;
-    font-size: calc(5px + 1vw);
+    font-size: 10px;
     box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.2);
+}
+
+/* * * * * * * * * * * * * * *
+Browser specific
+* * * * * * * * * * * * * * */
+
+@-moz-document url-prefix()
+{
+    #footerContainer
+    {
+        margin-top: 150px !important;
+    }
+
+    #emailInput::placeholder
+    {
+        padding-top: 10px;
+    }
 }
 
 /* * * * * * * * * * * * * * *
 Scale dependent
 * * * * * * * * * * * * * * */
-@media (max-width : 950px)
-{
-  .scale-dependent-show
-  {
-    display: block !important;
-  }
-  .scale-dependent-removal
-  {
-      display: none !important;
-  }
-  .mobile-review img
-  {
-    width: 200px;
-    height: 200px;
-  }
-  .mobile-review  p
-  {
-    margin: 15px 50px;
-  }
-  .review
-  {
-    padding-bottom: 15px;
-  }
+
+@media all and (min-width:200px) and (max-width: 1024px) {
+
+    .scale-dependent-show
+    {
+      display: block !important;
+    }
+
+    .scale-dependent-removal
+    {
+        display: none !important;
+    }
+
+    .mobile-review img
+    {
+      width: 200px;
+      height: 200px;
+    }
+
+    .mobile-review  p
+    {
+      margin: 15px 50px;
+    }
+
+    .review
+    {
+      padding-bottom: 15px;
+    }
+
+    #emailSubmitBtn
+    {
+        font-size: 18px;
+        background: white;
+        border-radius: 7px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        height: 37px;
+        width: 70px;
+        border: none;
+        color: #AF6826;
+    }
+
+    #emailSubmitBtn:hover
+    {
+        height: 35px;
+        width: 60px;
+        margin: 1px 5px;
+        font-size: 15px;
+        box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.2);
+    }
 }
 
