v.o.5.9 Add Draggable Boxes Finishing
Fixed the creation of boxes for new size
Fixed the size of the input & buttons for the boxes
Replace the buttons with new design

--- a/src/main/resources/static/styles/products.css
+++ b/src/main/resources/static/styles/products.css
@@ -19,5 +19,24 @@ html, body
 
 #product
 {
-    padding: 10vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#familyTreeDesignContainer
+{
+    width: 50vw;
+    height: 80vh;
+    background-image: url("../img/images/treeDesign/tree1.svg");
+    background-repeat: no-repeat;
+    margin:0 1vw;
+}
+
+#familyTreeOptionsContainer
+{
+    width: 20vw;
+    height: 80vh;
+    background: bisque;
+    margin:0 1vw;
 }
