--- a/src/main/resources/static/styles/draggableBox.css
+++ b/src/main/resources/static/styles/draggableBox.css
@@ -1,9 +1,9 @@
 #draggableBoxContainer
 {
     position: absolute;
-    width: 100%;
-    height: 94vh;
-    z-index: 99;
+    width: 50vw;
+    height: 80vh;
+    z-index: 97;
 }
 
 .draggableBox
@@ -13,7 +13,7 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    z-index: 100;
+    z-index: 98;
     height: 0;
     width: 0;
 }
@@ -50,30 +50,29 @@
 
 .dragDraggableBoxButton
 {
-    margin: 1vh;
     visibility: hidden;
     background-image: url("../img/icons/dragIcon.svg");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 4.5vh;
-    width: 4.5vh;
+    height: 4vh; /*Needs to scale with parent size*/
+    width: 4vh; /*Needs to scale with parent size*/
+    filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.25));
 }
 
 .deleteDraggableBoxButton
 {
-    margin: 1vh;
     visibility: hidden;
     background-image: url("../img/icons/exitIcon.svg");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 4.5vh;
-    width: 4.5vh;
+    height: 4vh; /*Needs to scale with parent size*/
+    width: 4vh; /*Needs to scale with parent size*/
+    filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.25));
 }
 
 .draggableBox:hover
 {
-    box-shadow: 5px 5px 20px;
-    z-index: 101;
+    z-index: 99;
 }
 
 .draggableBox:hover .dragDraggableBoxButton
@@ -96,16 +95,16 @@
 
 .draggableBox .input
 {
-    min-width: 100px;
-    max-width:310px;
-    max-height: 102px;
+    min-width: 1vh; /*Needs to scale with parent size, or can probably be removed*/
+    max-width: 10vh; /*Needs to scale with parent size*/
+    max-height: 5vh; /*Needs to scale with parent size*/
     overflow: hidden;
-
+    text-align: center;
     font-family: Spectral, sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
-    line-height: 27px;
+    font-size: 1.8vh; /*Needs to scale with parent size*/
+    line-height: 2vh; /*Needs to scale with parent size*/
     color: black;
     border: none;
     padding: 0;
