--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -8,6 +8,8 @@
     <link th:href="@{/styles/landingPage.css}" rel="stylesheet">
     <script th:src="@{/js/landingPage.js}"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
+    <!-- browser icon -->
+    <link rel="icon" href="/img/logos/treecreateLogo/browserLogo.svg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Simonetta">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
 </head>
