--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -16,7 +16,7 @@
 <body>
 <section id="pageContainer">
     <div id="popupContainer">
-        <div id="popup"><p>Thanks for subscribing ! :D</p></div>
+        <div id="popup"><p>Tak for at abonnerer!</p></div>
     </div>
     <section id="contentContainer">
         <div id="content">
@@ -26,14 +26,14 @@
                         <img th:src="@{~/img/logos/treecreateLogo/TCFullLogoWhite.svg}" alt="Treecreate Logo"
                              id="treecreateLogo">
                     </div>
-                    <span id="comingSoon">Coming Soon</span>
+                    <span id="comingSoon">Kommer snart</span>
                     <br>
-                    <span id="subscribe">Subscribe for starting offers</span>
+                    <span id="subscribe">Abonner for at få åbningstilbud!</span>
                     <div id="emailContainer">
-                        <input type="email" id="emailInput" name="newsletterEmail" placeholder=" Your email..."
+                        <input type="email" id="emailInput" name="newsletterEmail" placeholder=" Din email..."
                                required>
                         <button id="emailSubmitBtn" type="button" onclick="submitPopup()">
-                            Submit
+                            Abonner
                         </button>
                     </div>
                     <div class="icon-row-top">
@@ -50,47 +50,65 @@
             <div id="aboutUsContainer">
                 <div id="aboutUs">
                     <section id="generalInformation">
-                        <span class="title">About us</span><br>
-                        <span class="subTitle">Product</span><br>
+                        <span class="title">Vil du lykkedes med den helt unikke julegave til hele familien?</span><br><br>
                         <p>
-                            Unique wood design. You get to pick the design and then create your own tree with the names
-                            and text
-                            you want. With several options of changing design, fonts and text, every product becomes
-                            unique and
-                            personal.
+                            Få et personligt trædesign med din familie og få det laser skåret i smukt egetræ. Skab
+                            sammenværdet i familien med en gave alle kan sætte pris på. Bestil det nemt og hurtigt.
+                            Få løst alle julegaverne på en gang, og få det sendt lige til døren.
                         </p>
 
-                        <span class="subTitle">Goal</span><br>
+                        <span class="subTitle">Produkt</span><br>
                         <p>
-                            We aim to support wildlife and forests around the world by donating a percentage to
-                            foundations
-                            like
-                            #TeamTrees that focus on planting trees. when you purchase something you automatically also
-                            plant a
-                            tree. You also have the option plant several extra trees when you order.
-
-                            Our packaging is made of recycled plastic and paper and bio degradable paper tape. We focus
-                            on
-                            minimizing plastic production and try to have as much of the materials in the production be
-                            reuse of
-                            wood so no more trees are cut down.
-
-                            Last but not least, we want to give every customer a personal and unique tree design that
-                            they
-                            can
-                            use personally or as a great gift to friends and family. Our products are partially hand
-                            made
-                            and
-                            the rest is up to the laser that cuts in great detail to make an astonishing work of art for
-                            the
-                            customer.
+                            Vælg et design. Skriv navnene ind som du ønsker på træet. Når du er tilfreds med træet trykker
+                            du bestil, så sørger vi for resten. Når du køber flere træer på en gang får du op til 30% rabat.
                         </p>
 
-                        <span class="subTitle">Company</span><br>
+                        <span class="subTitle">Nul Affald</span><br>
                         <p>
-                            Founded in 2020 by a small team of students from KEA.
+                            Når du betaler, planter du automatisk også et træ og du er dermed med til at styrke naturen.
+                            Sammen planter 250+ træer for hvert egetræ vi bruger på at lave produktet. Indpakningen er også
+                            lavet 100% af genbrugspapir med FSC certificering.
                         </p>
                     </section>
+
+                    <!-- NEW SECTION -->
+                    <section id="reviews01" class="scale-dependent-removal">
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/insta6.png}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Peter</p>
+                                <p>
+                                    “Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til
+                                    hele familien for i år. mange tak!”
+                                </p>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/insta4.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Amalie</p>
+                                <p>
+                                    “Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så
+                                    kan vi printe den og klistre den på vores postkasse.”
+                                </p>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/insta5.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Emilie</p>
+                                <p>
+                                    “Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg
+                                    sikker på! Mange tak til Treecreate :D”
+                                </p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- NEW SECTION -->
                     <section id="reviews" class="scale-dependent-removal">
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
@@ -99,8 +117,7 @@
                                 <p class="title">Cristian</p>
                                 <p>
                                     “I love the tree! It is some great quality wood and the design is cut with such
-                                    detail
-                                    its amazing!”
+                                    detail its amazing!”
                                 </p>
                             </div>
                         </div>
@@ -111,8 +128,7 @@
                                 <p class="title">Anna</p>
                                 <p>
                                     “Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at
-                                    se
-                                    ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
+                                    se ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
                                 </p>
                             </div>
                         </div>
@@ -128,7 +144,41 @@
                             </div>
                         </div>
                     </section>
+
                     <div class="mobile-review scale-dependent-show" style="display: none;">
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/insta6.png}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Peter</p>
+                                <p>
+                                    “Vildt detaljeret og noget mega lækkert træ. Så er der ordnet julegaver til
+                                    hele familien for i år. mange tak!”
+                                </p>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/insta4.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Amalie</p>
+                                <p>
+                                    “Ej hvor er den bare flot! og så holder med den kan stå på. Så fik vi også PDF så
+                                    kan vi printe den og klistre den på vores postkasse.”
+                                </p>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <img th:src="@{~/img/images/landingPage/insta5.jpg}" alt="Tree Design"
+                                 class="image">
+                            <div class="text">
+                                <p class="title">Emilie</p>
+                                <p>
+                                    “Så glad for mit familie træ. Mormor bliver så glad når hun ser det, det er jeg
+                                    sikker på! Mange tak til Treecreate :D”
+                                </p>
+                            </div>
+                        </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
@@ -178,15 +228,15 @@
                 </div>
                 <div class="section">
                     <span class="title">Product</span><br><br>
-                    Every purchase plants a tree<br>
-                    Eco Friendly packaging<br>
-                    Produced in Denmark<br>
+                    Når du bestiller planter du et træ<br>
+                    Indpakning af 100% genbrusmaterialer<br>
+                    Produceret i Danmark<br>
                 </div>
 
                 <div class="section">
-                    <span class="title">Address</span><br><br>
-                    Denmark<br>
-                    Copenhagen
+                    <span class="title">Adresse</span><br><br>
+                    Danmark<br>
+                    København
                 </div>
             </div>
             <div class="footer-row">
